--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,41 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+client/node_modules/
+admin/node_modules/
 
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
 
 # Build files
-/dist
-/build
+client/build/
+admin/build/
+dist/
 
-# IDE and editor files
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Directory for uploaded files
+server/uploads/*
+!server/uploads/.gitkeep
+
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
 
-# OS generated files
+# OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db 
