--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon server/index.js",
     "client": "cd client && npm start",
     "admin": "cd admin && npm start",
-    "install-all": "npm install && cd client && npm install && cd ../admin && npm install"
+    "install-all": "npm install && cd client && npm install && cd ../admin && npm install",
+    "build": "cd client && npm run build && cd ../admin && npm run build",
+    "prod": "NODE_ENV=production node server/index.js"
   },
   "keywords": [
     "radio",
@@ -19,9 +21,11 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
