--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,31 +14,7 @@ services:
       - .env
     environment:
       - NODE_ENV=production
-      - DB_HOST=db
-    depends_on:
-      - db
-    networks:
-      - virtualradio-network
-
-  db:
-    image: mysql:8.0
-    restart: always
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASS}
-    ports:
-      - "${DB_PORT:-3306}:3306"
-    networks:
-      - virtualradio-network
 
 networks:
-  virtualradio-network:
-    driver: bridge
-
-volumes:
-  mysql_data: 
+  default:
+    driver: bridge 
