--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "next": "^14.0.4"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
