Configuração para exportação estática do Next.js e melhoria no tratamento de API

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export || echo 'Export command not needed in Next.js 13.3+' && cp -r .next/static ./out/",
     "start": "next start",
     "lint": "next lint"
   },
