--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon server/index.js",
     "dev:client": "cd client && npm run dev",
-    "build": "cd client && npm run build",
+    "build": "cd client && npm run build && npm run export",
     "start": "node server/index.js",
     "db:init": "node scripts/init-db.js"
   },
