--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.0",
     "next": "^14.0.4"
   },
@@ -25,4 +26,4 @@
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1"
   }
-} 
+}
