--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,51 @@
 # Dependencies
 node_modules/
-client/node_modules/
-admin/node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
-# Environment variables
+# Environment
 .env
 .env.local
 .env.*.local
-.env.development
-.env.test
-.env.production
 
-# Build files
-client/build/
-admin/build/
-dist/
+# Build
+/dist
+/build
+/client/build
+/admin/build
+
+# Uploads
+/server/uploads/*
+!/server/uploads/.gitkeep
+/server/uploads/music/*
+!/server/uploads/music/.gitkeep
+/server/uploads/spot/*
+!/server/uploads/spot/.gitkeep
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 
 # Logs
-logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+logs/
+debug-log.txt
+server.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Testing
+/coverage
+.nyc_output
+
+# Temp files
+*.tmp
+*.temp
 
 # Runtime data
 pids
@@ -32,20 +56,6 @@ pids
 # Directory for uploaded files
 server/uploads/*
 !server/uploads/.gitkeep
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Pnp
-.pnp/
-.pnp.js
 
 # Arquivos de configuração específicos dos usuários
 .npmrc
