Fix JWT authentication and DB configuration

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Configurações do Banco de Dados
-DB_HOST=site-designativa_myradio-sql
+DB_HOST=localhost
 DB_USER=desig938_myradio
 DB_PASS=sua_senha_aqui
 DB_NAME=desig938_myradio
