--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.0",
-    "next": "^14.0.4"
+    "next": "^14.0.4",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
