--- a/client/package.json
+++ b/client/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.7",
     "howler": "^2.2.4",
-    "next": "^15.3.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.45.1"
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.9",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "autoprefixer": "^10.4.17",
+    "@eslint/eslintrc": "^3.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
