--- a/.gitignore
+++ b/.gitignore
@@ -9,18 +9,56 @@ node_modules/
 # Next.js
 /.next/
 /out/
+/client/.next/
+/client/out/
+.next/
 
 # Production
 /build
+/client/build
 
 # Misc
 .DS_Store
 *.pem
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Local files
+*.local
+.env.local
+.env.*.local
+
+# IDE
+.idea/
+.vscode/
+
+# Uploads
+/uploads/*
+!/uploads/.gitkeep
+
+# Temp files
+/tmp
+*.tmp
+*.temp
+
+# Cache
+.cache/
+
+# Logs
+logs/
+*.log
+
+# Database
+*.sqlite
+*.db
 
 # Local env files
 .env
